--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
 <body>
     моё портфолио
+    <a href="https://zmeygar.github.io/greenmirmarket/">Магазин ГринМир</a>
+    <a href="https://zmeygar.github.io/uspeh-magazin/">Магазин УСПЕХ</a>
 </body>
 
 </html>
